syntax = "proto3";

option go_package = "github.com/xpanvictor/raft";

package raft;

service RaftService {
  // request vote
  rpc RequestVote (VoteRequest) returns (VoteResponse) {}
  // append entity
  rpc AppendEntity (AppendEntityRequest) returns (AppendEntityResponse) {}
}

message VoteRequest {
  int32 term = 1;
  int32 candidateId = 2;
  int32 lastLogTerm = 3;
  int32 lastLogIndex = 4;
}

message VoteResponse {
  int32 currentTerm = 1;
  bool voteGranted = 2;
}

message AppendEntityRequest {
  int32 term = 1;
  int32 leaderId = 2;
  int32 prevLogIndex = 3;
  int32 prevLogTerm = 4;
  repeated string entries = 5;
  int32 leaderCommit = 6;
}

message AppendEntityResponse {
  int32 term = 1;
  bool success = 2;
}
